feat: mael detailとか色々
