# meal-manager-api/src/main/kotlin/com/ken_stack/meal_manager_api/controller/gen/model/MealsResponse.kt
@@ -1,0 +1,17 @@
+package com.ken_stack.meal_manager_api.controller.gen.model
+
+import java.util.Objects
+import com.fasterxml.jackson.annotation.JsonProperty
+import com.ken_stack.meal_manager_api.controller.gen.model.MealResponse
+
+/**
+ * 
+ * @param meals 
+ */
+data class MealsResponse(
+
+    @get:JsonProperty("meals", required = true) val meals: kotlin.collections.List<MealResponse>
+    ) {
+
+}
+
